# BobNote

./: Cargo.toml  README.md  bob.txt
src/: app.rs  colors.rs  config.rs  constants.rs  corkboard.rs  effects.rs  input.rs  main.rs  note.rs  notebook.rs  pty.rs  terminal.rs  trash.rs  ui.rs  workspace.rs
src/ui/: corkboard.rs  notes.rs  overlays.rs
